- Fix bugs - Added LiveData and ViewModel components

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,6 @@
     <string name="prefix_id">ID: </string>
     <string name="signal_list_title">Signal List By Instruments</string>
     <string name="loginScreenSuffix">: Login</string>
+    <string name="login_failed">Authentication failed. Check your credentials and try again!</string>
 
 </resources>
